deploying-wordpress-and-mysql-with-persistent-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc # 匹配 wordpress Service 的 name
                port:
                  number: 80
